# raw2dng

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  deps.sh  exv_conf.h  r2d.cpp  raw2dng.cpp  raw2dng.h  rawConverterC.cpp  rawConverterC.h  test.cpp
Raw2Dng/Raw2Dng/: ContentView.swift  Raw2DNG-Bridging-Header.h  Raw2DNGApp.swift  Raw2DNGBridge.h  Raw2DNGBridge.mm  Raw2DNGConverter.swift
Raw2Dng/Raw2Dng.xcodeproj/: project.pbxproj
Raw2Dng/Raw2Dng.xcodeproj/project.xcworkspace/xcuserdata/fl.xcuserdatad/: UserInterfaceState.xcuserstate
Raw2Dng/Raw2Dng.xcodeproj/xcuserdata/fl.xcuserdatad/xcschemes/: xcschememanagement.plist
build_xcode_ios/: ios.toolchain.cmake  xcode.sh
dng-sdk/: CMakeLists.txt
dng-sdk/source/: dng_lossless_jpeg_shared.cpp  dng_preview.cpp  dng_preview.h  dng_reference.cpp  dng_simple_image.h  dng_uncopyable.h
exiv2/: CMakeLists.txt  DartConfiguration.tcl  exiv2.pc  exv_conf.h
exiv2/cmake/: findDependencies.cmake
exiv2/include/exiv2/: MD5.h
exiv2/src/: CMakeLists.txt  MD5.cpp  exiv2Config.cmake  xmp.cpp
libdng/: CMakeLists.txt
libdng/dng-sdk/: CMakeLists.txt
libdng/dng-sdk/libjxl/: .gitignore  CMakeLists.txt  DartConfiguration.tcl  decode_oneshot  decode_progressive  deps.sh  encode_oneshot
libdng/dng-sdk/libjxl/lib/: CMakeLists.txt
libdng/md5/: CMakeLists.txt
libdng/xmp-sdk/: CMakeLists.txt
libdng/xmp-sdk/XMPCore/source/: ExpatAdapter.cpp  XMPUtils-FileInfo.cpp  XMPUtils.cpp  XMPUtils.hpp  XMPUtils2.cpp
libdng/xmp-sdk/source/: XMP_LibUtils.hpp
libjxl/: CMakeLists.txt  decode_oneshot  decode_progressive  deps.sh  encode_oneshot
libjxl/lib/: CMakeLists.txt  jxl.cmake  libjxl.pc  libjxl_threads.pc
libjxl/lib/include/jxl/: version.h
libraw/: CMakeLists.txt  libraw_config.h
md5/: MD5.cpp
raw2dng/: CMakeLists.txt  negativeProcessor.cpp  negativeProcessor.h  raw2dng.cpp  raw2dng.h  rawConverter.cpp  rawConverter.h
raw2dng/vendorProcessors/: DNGprocessor.cpp  DNGprocessor.h  FujiProcessor.cpp  FujiProcessor.h  ILCE7processor.cpp  ILCE7processor.h  variousVendorProcessor.cpp  variousVendorProcessor.h
rawConverter/: CMakeLists.txt  dnghost.cpp  dnghost.h  negativeProcessor.cpp  negativeProcessor.h  rawConverter.cpp  rawConverter.h  util.hpp
rawConverter/vendorProcessors/: BaseProcessor.h  DNGprocessor.cpp  DNGprocessor.h  FujiProcessor.cpp  FujiProcessor.h  ILCE7processor.cpp  ILCE7processor.h  variousVendorProcessor.cpp  variousVendorProcessor.h
xmp-sdk/: CMakeLists.txt
xmp-sdk/XMPCore/source/: XMPMeta-GetSet.cpp  XMPMeta-Serialize.cpp  XMPMeta2-GetSet.cpp
