
CMAKE_MINIMUM_REQUIRED( VERSION 3.10.1 )

SET(JPEGXL_ENABLE_SJPEG FALSE)
SET(JPEGXL_ENABLE_TOOLS FALSE)
SET(BUILD_TESTING FALSE)

execute_process( COMMAND bash ${CMAKE_CURRENT_SOURCE_DIR}/deps.sh WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} RESULT_VARIABLE DEPS_RESULT )
if(NOT DEPS_RESULT EQUAL 0) 
    message(FATAL_ERROR "Failed to run libjxl/deps.sh") 
endif()

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
ADD_SUBDIRECTORY(third_party)
ADD_SUBDIRECTORY(lib)
